@@ -385,6 +385,7 @@ void _find_subs(struct fof *f, int64_t level) {
   //Find subFOFs
   p_start = f->particles - copies;
   f_index = f - subfofs;
+  int64_t f_np = f->num_p;
   _find_subfofs_better2(f, FOF_FRACTION);
   f_start = num_subfofs;
   copy_fullfofs(&subfofs, &num_subfofs, &num_alloced_subfofs);
@@ -392,7 +393,7 @@ void _find_subs(struct fof *f, int64_t level) {
 
   h_start = num_halos;
   for (i=f_start; i<f_end; i++)
-    if (subfofs[i].num_p > MIN_HALO_PARTICLES)
+    if (subfofs[i].num_p > MIN_HALO_PARTICLES && subfofs[i].num_p < f_np)
       _find_subs(subfofs + i, level+1);
 
   //Convert particle positions back to normal
