@@ -1,6 +1,8 @@
 v0.99.9-RC4:
 *) Added halfmass radii to halo outputs.
 *) Fixed bugs in io_arepo.c and sever.c/client.c related to input blocks with no particles (thanks to Alex Ji for catching).
+*) Fixed bug wherein setting EXACT_LL_CALC could cause an infinite loop.  (Thanks to Manodeep Sinha for catching).
+*) Added experimental capability to dump backtraces on network errors.  (Uncomment BACKTRACE_NETWORK_ERRORS in inet/socket.h to enable).
 
 v0.99.9-RC3 (5/13/14):
 *) Fix to io/io_tipsy.c to support non-XDR TIPSY files.  (Thanks to Robert Thompson for finding!).
